# scipeds

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  Makefile  README.md  RELEASE.md  RELEASING.md  check_data_continuity.ipynb  cip_exploration.ipynb  pyproject.toml  upload_old_data.ipynb
.github/workflows/: auth.yml  release.yml  tests.yml
docs/: mkdocs.yml
docs/docs/: changelog.md  cip.md  completions.md  data.md  enums.md  faq.md  index.md  institution.md  queries.md  usage.ipynb
docs/docs/stylesheets/: extra.css
docs/scripts/: generate-schema.py
pipeline/: cip_crosswalk.py  completions.py  db.py  download.py  fall_enrollment.py  institutions.py  requirements.in  requirements.txt  settings.py
pipeline/assets/: README.md  dhs_stem_classification_table.csv  ncses_stem_classification_table.csv
pipeline/tests/: test_cip.py
requirements/: ci.txt  dev.txt  docs.txt  lint.txt
scipeds/: __init__.py  cli.py  constants.py  utils.py
scipeds/data/: completions.py  engine.py  enums.py  fall_enrollment.py  queries.py
scipeds/data/tests/: test_calculations.py  test_constants.py  test_models.py  test_queries.py
scipeds/data/tests/assets/: test.duckdb
scipeds/tests/: test_transforms.py
