[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "scipeds"
version = "0.0.2"
dependencies = [
  "cloudpathlib[gs]",
  "duckdb",
  "lxml",
  "numpy",
  "openpyxl",
  "pandas",
  "platformdirs",
  "pydantic",
  "python-dotenv",
  "statsmodels",
  "tqdm",
  "typer",
  "xlrd",
]
description = "A Python package for working with IPEDS data"
authors = [
  { name = "Science for America", email = "info@scienceforamerica.org" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Education",
]
requires-python = ">=3.10"

[project.scripts]
scipeds = "scipeds.cli:app"

[tool.ruff]
line-length = 99
src = ["scipeds"]
include = ["scipeds/**/*.py", "docs/**/*.py", "pipeline/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["scipeds"]
